--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera! Suck My dick</h1>
+<h1>Hello Coursera! It's a great course!</h1>
 </body>
 </html>
